@@ -9,6 +9,7 @@
 
 #include <errno.h>
 #include <fcntl.h>
+#include <poll.h>
 #include <signal.h>
 #include <syslog.h>
 #include <unistd.h>
@@ -19,17 +20,27 @@
 struct rtp_cb_data
 {
   SyRouting *routing;
+  void *(*callback_func)(unsigned dst_slot,const char *data,int len,SyRouting *,void *);
   void *priv;
 } cb_data;
 
-void *ThreadCallback(void *p)
+void *__RtpServer_ThreadCallback(void *p)
 {
   struct rtp_cb_data *cb_data=(struct rtp_cb_data *)p;
   struct sockaddr_in sa;
+  struct sockaddr_in play_sa;
+  struct msghdr hdr;
   int read_sock;
   int write_sock;
   long sockopt;
   QHostAddress addr;
+  struct iovec iovs[1];
+  uint8_t buffer[1500];
+  char mc[3000];
+  struct cmsghdr *chdr=NULL;
+  struct pollfd fds;
+  uint32_t dst;
+  ssize_t n;
 
   //
   // Open the read socket
@@ -51,10 +62,7 @@ void *ThreadCallback(void *p)
   //
   // Open the write socket
   //
-  if((write_sock=socket(PF_INET,SOCK_DGRAM,IPPROTO_IP))<0) {
-    syslog(LOG_ERR,"unable to create RTP socket [%s]",strerror(errno));
-    exit(256);
-  }
+  write_sock=cb_data->routing->rtpSendSocket();
   sockopt=1;
   setsockopt(write_sock,SOL_SOCKET,SO_REUSEADDR,&sockopt,sizeof(sockopt));
   setsockopt(write_sock,IPPROTO_IP,IP_PKTINFO,&sockopt,sizeof(sockopt));
@@ -68,15 +76,81 @@ void *ThreadCallback(void *p)
     return NULL;
   }
 
-  RtpCallback(read_sock,write_sock,cb_data->routing,cb_data->priv);
+  //
+  // Initialize Transmit Headers
+  //
+  memset(&play_sa,0,sizeof(play_sa));
+  play_sa.sin_family=AF_INET;
+  play_sa.sin_port=htons(SWITCHYARD_RTP_PORT);
+
+  //
+  // Initialize Stream Router
+  //
+  memset(&sa,0,sizeof(sa));
+  memset(&hdr,0,sizeof(hdr));
+  hdr.msg_name=&sa;
+  hdr.msg_namelen=sizeof(sa);
+  hdr.msg_iov=iovs;
+  hdr.msg_iovlen=1;
+  iovs[0].iov_base=buffer;
+  iovs[0].iov_len=sizeof(buffer);
+  hdr.msg_control=mc;
+  hdr.msg_controllen=sizeof(mc);
+  hdr.msg_flags=0;
+  memset(&fds,0,sizeof(fds));
+  fds.fd=read_sock;
+  fds.events=POLLIN;
+
+  //
+  // Process RTP Data
+  //
+  while(!global_exiting) {
+    switch(poll(&fds,1,100)) {
+    case -1:
+      syslog(LOG_WARNING,"poll() returned error [%s]",strerror(errno));
+      break;
+
+    case 0:
+      if(global_exiting) {
+	close(read_sock);
+	return NULL;
+      }
+      break;
+
+    default:
+      n=recvmsg(read_sock,&hdr,0);
+      dst=0;
+      chdr=CMSG_FIRSTHDR(&hdr);
+      while(chdr!=NULL) {
+	if(chdr->cmsg_type==IP_PKTINFO) {
+	  dst=((struct in_pktinfo *)CMSG_DATA(chdr))->ipi_addr.s_addr;
+	}
+	chdr=CMSG_NXTHDR(&hdr,chdr);
+      }
+      if(dst>0) {
+	//printf("received %ld bytes from %s.\n",n,
+	//       (const char *)SyRouting::dumpAddress(dst).toAscii());
+	cb_data->callback_func(dst,(char *)buffer,n,cb_data->routing,
+			       cb_data->priv);
+	break;
+      }
+    }
+  }
+
+  close(write_sock);
   close(read_sock);
   return NULL;
 }
 
 
-SyRtpServer::SyRtpServer(SyRouting *routing,void *priv,QObject *parent)
+SyRtpServer::SyRtpServer(void *(*callback_func)(unsigned,const char *,int,SyRouting *,void *),
+			 void *callback_priv,SyRouting *routing,QObject *parent)
   : QObject(parent)
 {
+  cb_data.callback_func=callback_func;
+  cb_data.priv=callback_priv;
+  cb_data.routing=routing;
+
   pthread_attr_t pthread_attr;
 
   //
@@ -98,11 +172,9 @@ SyRtpServer::SyRtpServer(SyRouting *routing,void *priv,QObject *parent)
   //
   // Start the Realtime Thread
   //
-  cb_data.routing=routing;
-  cb_data.priv=priv;
   pthread_attr_init(&pthread_attr);
   pthread_attr_setschedpolicy(&pthread_attr,SCHED_FIFO);
-  pthread_create(&rtp_thread,&pthread_attr,ThreadCallback,&cb_data);
+  pthread_create(&rtp_thread,&pthread_attr,__RtpServer_ThreadCallback,&cb_data);
 }
 
 
