@@ -136,3 +136,6 @@
 	'sy/sygpio_server.cpp' and 'sy/sygpio_server.h'.
 	* Refactored the 'SyAdvServer' class to use 'SyMcastSocket' in
 	'sy/syadv_server.cpp' and 'sy/syadv_server.h'.
+2014-08-02 Fred Gleason <fredg@paravelsystems.com>
+	* Refactored and simplified the callback system in the 'SyRtpServer'
+	class in 'sy/syrtp_server.cpp' and 'sy/sy_rtpserver.h'.
